--- a/index.html
+++ b/index.html
@@ -5,11 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Memory Card Game</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" defer></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div class="game-board">
         <ul class="cards">
-      
+            <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-1.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-1.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-2.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-2.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-3.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-3.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-4.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-4.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-5.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-5.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-6.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-6.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-7.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-7.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-8.png" alt="card-img">
+                </div>
+              </li>
+              <li class="card">
+                <div class="view front-view">
+                  <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                  <img src="images/img-8.png" alt="card-img">
+                </div>
+              </li>
         </ul>
       </div>
   </body>
